Khi clear hien dialog confirm Khi upload hien dialog confirm

--- a/app/src/main/res/layout/dialog_chart.xml
+++ b/app/src/main/res/layout/dialog_chart.xml
@@ -22,6 +22,7 @@
             android:textSize="10dp"
             android:text="Close"/>
     <com.github.mikephil.charting.charts.LineChart
+        android:paddingTop="@dimen/margin_lr"
         android:layout_marginTop="8dp"
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
