--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,49 +6,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.LoginActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_lr"
         android:layout_marginLeft="@dimen/margin_lr"
         android:layout_marginRight="@dimen/margin_lr"
+        android:layout_marginTop="@dimen/margin_lr"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="User name"/>
+            android:text="Username"
+            android:textColor="@color/black"/>
+
         <EditText
-            android:layout_marginTop="4dp"
             android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_text_height"
-            android:text="tung"
-            android:background="@drawable/edittext_bg"
-            android:singleLine="true"
-            /><TextView
-        android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="User name"/>
-        <EditText
             android:layout_marginTop="4dp"
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:inputType="textPassword"
-            android:layout_height="@dimen/edit_text_height"
-            android:text="tung#3"
             android:background="@drawable/edittext_bg"
             android:singleLine="true"
             />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="User name"
+            android:textColor="@color/black"/>
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/edittext_bg"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cbRemember"
+                android:layout_width="36dp"
+                android:layout_height="match_parent"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="8dp"
+                android:gravity="center_vertical"
+                android:text="Remember username"
+                />
+        </LinearLayout>
+
         <Button
+            android:id="@+id/btLogin"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
-            android:text="LOGIN"
             android:background="@drawable/button_bg"
-            android:id="@+id/btLogin"/>
+            android:text="LOGIN"/>
     </LinearLayout>
 
 </RelativeLayout>
